# GO2-semantic-navigation

./: .gitignore  README.md  requirements.txt
docs/: HOW_TO_RUN.md  PROJECT_STATUS.md  README.md  day4_nav2_status.md  day5_yoloe_status.md  day6_semantic_memory_status.md  day7_target_navigation_status.md  day8_test_setup.md  day8_two_phase.md  decisions.md  known_issues.md  phase0_status.md  phase1_status.md  phase2_status.md  phase3_status.md  phase3a_status.md  phase3b_status.md  phase4_status.md  phase5_status.md
maps/: .gitkeep
scripts/: _check_day65_dynamic.py  _check_day8_consumption.py  _check_day8_frontier_unit.py  _debug_day8_cleanup_relaunch.sh  _debug_day8_probe.py  _smoke_action_debug_paths.py  _smoke_approach_goal_planner_throttle_reset.py  _smoke_arrival_verifier.py  _smoke_cleanup_semantic_landmarks_script.py  _smoke_day8_two_phase_min_det_conf.py  _smoke_frontier_marker_clear.py  _smoke_mapping_debug_status.py  _smoke_nl_command_chain.py  _smoke_record_mapping_debug.py  _smoke_record_semantic_lifecycle.py  _smoke_semantic_memory_demo_stability.py  _smoke_table_cleanup.py  _smoke_table_mask_only.py  bashrc_aliases.example  check_anchor_health.sh  check_day12.sh  check_day3.sh  check_day4.sh  check_day5.sh  check_day6.sh  check_day6_5.sh  check_day7.sh  check_day8.sh  check_day8_two_phase.sh  check_table_semantic_health.sh  cleanup_semantic_landmarks.sh  debug_mapping_explorer.sh  debug_nav2_action_chain.sh  dev_env.sh  diagnose_cmd_vel_rates.sh  diagnose_semantic_perception.sh  drive_warehouse_lap.sh  dump_isaaclab_joint_order.py  dump_isaaclab_joint_order.sh  echo_cmd_vel_angular.sh  (+23 more)
sim/: README.md  build_go2_warehouse.py  locomotion_backends.py  run_go2_warehouse_ros2.py  warehouse_scene.py
sim/worlds/: go2_warehouse_10x10.usd
src/go2_bringup_sim/: package.xml  setup.cfg  setup.py
src/go2_bringup_sim/config/: sim_interface_contract.yaml
src/go2_bringup_sim/config/nav2/: nav2_params.yaml  nav2_params_social.yaml
src/go2_bringup_sim/config/rviz/: demo_recording.rviz
src/go2_bringup_sim/config/slam/: slam_toolbox_mapping.yaml  slam_toolbox_motion_smooth.yaml
src/go2_bringup_sim/go2_bringup_sim/: __init__.py
src/go2_bringup_sim/launch/: chair_execute_goal.launch.py  chair_goto_goal.launch.py  chair_perception.launch.py  chair_semantic_memory.launch.py  chair_with_search.launch.py  command_first_demo.launch.py  day6.launch.py  day7.launch.py  day8.launch.py  day8_two_phase.launch.py  mapping.launch.py  nav2.launch.py  sim_semantic_nav.launch.py  tf_and_scan.launch.py  yoloe.launch.py
src/go2_bringup_sim/resource/: go2_bringup_sim
src/go2_bringup_sim/rviz/: go2_motion_debug.rviz  go2_semantic_nav.rviz
src/go2_bringup_sim/urdf/: go2_minimal.urdf
src/go2_command_interface/: package.xml  setup.cfg  setup.py
src/go2_command_interface/config/: semantic_targets.yaml
src/go2_command_interface/go2_command_interface/: __init__.py  command_parser_node.py
src/go2_command_interface/resource/: go2_command_interface
src/go2_debug_tools/: package.xml  setup.cfg  setup.py
src/go2_debug_tools/go2_debug_tools/: __init__.py  integration_command_publisher.py  integration_trace_watcher.py  runtime_logger_node.py  semantic_markers_node.py  synthetic_chair_observation_publisher.py
src/go2_debug_tools/resource/: go2_debug_tools
src/go2_msgs/: CMakeLists.txt  package.xml
src/go2_msgs/msg/: Detection2D.msg  Detection2DArray.msg  InstanceMask.msg  InstanceMaskArray.msg  ObjectObservation.msg  ObjectObservationArray.msg  SelectedTarget.msg  SemanticEntity.msg  SemanticEntityArray.msg  SemanticTask.msg  TrackedObject.msg  TrackedObjectArray.msg
src/go2_msgs/srv/: GetFrontiers.srv
src/go2_navigation/: package.xml  setup.py
src/go2_navigation/go2_navigation/: __init__.py  arrival_verifier_node.py  frontier_explorer_node.py  goal_planner_node.py  mapping_explorer_node.py  nav_executor_node.py  search_manager_node.py  social_obstacle_publisher.py  target_selector_node.py  utils.py
src/go2_navigation/go2_navigation/backends/: __init__.py  base_backend.py  go2_velocity_backend.py  nav2_backend.py  simple_p_controller_backend.py
src/go2_navigation/resource/: go2_navigation
src/go2_nl_parser/: package.xml  setup.cfg  setup.py
src/go2_nl_parser/go2_nl_parser/: __init__.py  nl_parser_node.py
src/go2_object_localization/: package.xml  setup.cfg  setup.py
src/go2_object_localization/go2_object_localization/: __init__.py  object_localizer_3d_node.py
src/go2_object_localization/resource/: go2_object_localization
src/go2_perception/: package.xml  setup.py
src/go2_perception/go2_perception/: __init__.py  grounding_sam_backend.py  perception_node.py  yolo_backend.py  yoloe_backend.py  yoloe_detector_node.py
src/go2_perception/resource/: go2_perception
src/go2_safety/: package.xml  setup.cfg  setup.py
src/go2_safety/go2_safety/: __init__.py  safety_monitor_node.py
src/go2_safety/resource/: go2_safety
src/go2_semantic_memory/: package.xml  setup.cfg  setup.py
src/go2_semantic_memory/go2_semantic_memory/: __init__.py  object_tracker_node.py  semantic_map_node.py
src/go2_semantic_memory/resource/: go2_semantic_memory
src/go2_semantic_perception/: package.xml  setup.cfg  setup.py
src/go2_semantic_perception/go2_semantic_perception/: approach_goal_planner_node.py  depth_projector_node.py  semantic_memory_aggregator_node.py  semantic_memory_policy_helpers.py  target_selector_node.py
src/go2_task_coordinator/: package.xml  setup.cfg  setup.py
src/go2_task_coordinator/go2_task_coordinator/: __init__.py  task_coordinator_node.py
src/go2_task_coordinator/resource/: go2_task_coordinator
tools/: publish_go_to_chair.sh  record_min_topics.sh
