<?xml version="1.0"?>
<package format="3">
  <name>go2_bringup_sim</name>
  <version>0.1.0</version>
  <description>Isaac Sim bringup package for Go2 semantic navigation MVP.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2_command_interface</exec_depend>
  <exec_depend>go2_perception</exec_depend>
  <exec_depend>go2_object_localization</exec_depend>
  <exec_depend>go2_semantic_memory</exec_depend>
  <exec_depend>go2_navigation</exec_depend>
  <exec_depend>go2_task_coordinator</exec_depend>
  <exec_depend>go2_safety</exec_depend>
  <exec_depend>go2_debug_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
