<?xml version="1.0"?>
<package format="3">
  <name>go2_command_interface</name>
  <version>0.1.0</version>
  <description>Command parsing interface for Go2 semantic navigation MVP.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>go2_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
