<?xml version="1.0"?>
<package format="3">
  <name>go2_object_localization</name>
  <version>0.1.0</version>
  <description>RGB-D based 3D object localization for Go2 semantic navigation.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>go2_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
