<?xml version="1.0"?>
<package format="3">
  <name>go2_perception</name>
  <version>0.1.0</version>
  <description>Perception package with YOLO and Grounding-SAM fallback.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>go2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <!-- Day 5: vision_msgs gives Detection2DArray + ObjectHypothesis -->
  <depend>vision_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
