<?xml version="1.0"?>
<package format="3">
  <name>go2_safety</name>
  <version>0.1.0</version>
  <description>Safety monitoring for Go2 semantic navigation MVP.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
