<?xml version="1.0"?>
<package format="3">
  <name>go2_task_coordinator</name>
  <version>0.1.0</version>
  <description>High-level FSM task coordinator for Go2 semantic navigation.</description>
  <maintainer email="go2@example.com">go2_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>go2_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
